# zosimos

./: .gitignore  Cargo.toml  Readme.md  build.rs  editor-wasm32.sh
.github/workflows/: ci.yml
docs/: decision-log.md  design-guidelines.md  ideas.md  philosophy.md  roadmap.md
lib/lang/: Cargo.toml
lib/lang/src/: ast.rs  lib.rs
lib/not-wren/: Cargo.toml
lib/not-wren/src/: lib.rs
src/: buffer.rs  command.rs  encoder.rs  lib.rs  pool.rs  program.rs  run.rs  types.rs
src/command/: crop.rs  dynamic.rs
src/program/: encoder.rs
src/run/: timing.rs
src/shaders/: bilinear.frag  bilinear.rs  box.vert  box3.frag  box3.rs  copy.frag  crt.frag  data.rs  distribution_normal2d.frag  distribution_normal2d.rs  fill.frag  flat_field.frag  float.frag  fractal_noise.frag  fractal_noise.rs  inject.frag  inject.rs  linear.frag  mandelbrot.frag  mod.rs  noop.vert  oklab.frag  oklab.rs  palette.frag  palette.rs  solid_rgb.frag  solid_rgb.rs  srlab2.frag  srlab2.rs  stage.frag  stage.rs
src/util/: mod.rs  ping_future.rs
tests/: async.rs  blend.rs  buffer.rs  color_support.rs  custom.rs  direct.rs  generic.rs  knobs.rs  loop.rs  util.rs
tests/debug/: Readme.md
tests/reference/: adapted.png.crc  affine.png.crc  composed.png.crc  convert_bt709.png.crc  distribution_fractal2d.png.crc  distribution_normal1d.png.crc  distribution_normal2d.png.crc  distribution_u8.png.crc  mandelbrot.png.crc  oklab.png.crc  palette.png.crc  srlab2.png.crc  swapped.png.crc
