[package]
name = "stealth-paint"
version = "0.1.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
bytemuck = "1.4"
slotmap = "1"
wgpu = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-io = "1.3"
# Well, we try.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.19"

[dependencies.image]
version = "0.23.12"
default-features = false

[dependencies.image-canvas]
git = "https://github.com/image-rs/canvas"
rev = "a9eb1ff32715d5eb909bc09f33f24a6415bde905"

[dependencies.palette]
version = "0.5.0"
default-features = false
features = ["libm"]

[build-dependencies]
shaderc = "0.7"

[dev-dependencies]
image = "0.23.13"
crc32fast = "1.2"

[[test]]
name = "blend"
