[package]
name = "stealth-paint"
version = "0.1.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MPL-2.0"
resolver = "2"

[dependencies]
bytemuck = "1.4"
waker-fn = "1.1"

[dependencies.image]
version = "0.24.0"
default-features = false

[dependencies.image-canvas]
version = "0.4.2"

[dependencies.log]
version = "0.4"

[dependencies.palette]
version = "0.5.0"
default-features = false
features = ["libm"]

[dependencies.slotmap]
version = "1"
default-features = false

[dependencies.wgpu]
version = "0.17.1"
features = ["spirv"]

[workspace]
members = [".", "bin/editor"]


[build-dependencies]
shaderc = "0.7"

## Local, Testing dependencies.

[dev-dependencies]
crc32fast = "1.2"
env_logger = "0.9"

[dev-dependencies.image]
version = "0.24.0"
default-features = false
features = ["png"]

[[test]]
name = "blend"

[[test]]
name = "direct"

[profile.release]
debug = true
opt-level = 2

[profile.release-with-assertions]
inherits = "release"
debug-assertions = true

[profile.test]
debug = 0
opt-level = 2

## From here on is our local development profile.
## We use it for CI and testing, not release.
## Important parts are compiling image deps with release.

[profile.dev.package."*"]
debug = 0
overflow-checks = false

[profile.test.package]
adler32.opt-level = 3
crc32fast.opt-level = 3
miniz_oxide.opt-level = 3
png.opt-level = 3
deflate.opt-level = 3

[profile.dev.package]
adler32.opt-level = 3
crc32fast.opt-level = 3
miniz_oxide.opt-level = 3
png.opt-level = 3
deflate.opt-level = 3
